--- a/package.json
+++ b/package.json
@@ -1,24 +1,44 @@
 {
   "name": "assignment-autocomplete",
-  "version": "1.0.0",
-  "description": "assignment-autocomplete",
   "main": "index.js",
   "scripts": {
+    "build": "node ./bin/cli build",
+    "clean": "rm -rf dist",
+    "dev": "linklocal link -r && linklocal list -r | bulk -c 'npm i --production'",
+    "postversion": "npm run build && gh-pages -d ./dist && npm run clean && echo 'done'",
+    "prepublish": "if [[ $NODE_ENV != 'production' ]]; then npm run dev; fi",
+    "preversion": "npm run clean",
+    "start": "NODE_ENV=development node ./bin/cli start -p 1337 | garnish",
     "test": "standard && NODE_ENV=test node test",
     "test-cov": "standard && NODE_ENV=test istanbul cover test.js"
   },
-  "repository": "yoshuawuyts/assignment-autocomplete",
-  "keywords": [],
-  "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {
-    "istanbul": "^0.3.17",
-    "standard": "^4.5.4",
-    "tape": "^4.0.1"
+  "browserify": {
+    "transform": [
+      "babelify"
+    ]
   },
-  "files": [
-    "LICENSE",
-    "README.md",
-    "index.js"
-  ]
+  "license": "MIT",
+  "dependencies": {
+    "css-wipe": "^1.0.1",
+    "fs-walk": "0.0.1",
+    "horsey": "^2.5.2",
+    "nets": "^3.1.0"
+  },
+  "devDependencies": {
+    "babelify": "^6.1.2",
+    "brick-router": "^2.1.1",
+    "brick-server": "^1.0.0",
+    "browserify": "^10.2.3",
+    "bulk": "^2.0.0",
+    "cliclopts": "^1.1.0",
+    "cssnext": "^1.6.0",
+    "garnish": "^2.1.3",
+    "gh-pages": "^0.3.0",
+    "istanbul": "^0.3.14",
+    "linklocal": "^2.5.2",
+    "minimist": "^1.1.1",
+    "standard": "^4.0.1",
+    "tape": "^4.0.0",
+    "watchify": "^3.2.1"
+  }
 }
