--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "css-wipe": "^1.0.1",
     "fs-walk": "0.0.1",
     "horsey": "^2.5.2",
-    "nets": "^3.1.0"
+    "nets": "^3.1.0",
+    "send-data": "^7.0.0"
   },
   "devDependencies": {
     "babelify": "^6.1.2",
